[package]
name = "lsm"
version = "0.1.0"
edition = "2024"
authors = ["Seif Elwarwary <seifelwarwary@gmail.com>"]
description = "A persistent, embedded Key-Value storage engine using an LSM-tree architecture."
readme = "README.md"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}  # Asynchronous runtime for background flushing and compaction
# Error Handling
thiserror = "2.0.18"

# Concurrency & Data Structures
crossbeam-skiplist = "0.1"  # Provides a highly optimized, lock-free SkipList for the MemTable
crossbeam-channel = "0.5"   # Efficient channels for sending flush tasks to background threads
parking_lot = "0.12"        # Smaller, faster alternatives to std::sync Mutex and RwLock

# Data Manipulation & Disk I/O
bytes = "1.5"               # Efficient, zero-copy byte array manipulation
zerocopy = "0.8"            # Efficient, zero-copy byte array manipulation
crc32fast = "1.3"           # Fast hardware-accelerated CRC32 for WAL and block checksums
twox-hash = "2.1"           # Extremely fast non-cryptographic hash function for the Bloom Filter
bitvec = "1.0"              # Ergonomic bit-level manipulation for building the Bloom Filter
serde = { version = "1", features = ["derive"] }  # Catalog serialization
serde_json = "1"            # Human-readable catalog format; swap to binary once catalog I/O matters

# Observability
tracing = "0.1"             # Modern, structured logging for debugging background tasks
tracing-subscriber = "0.3"

[dev-dependencies]
# Testing & Benchmarking
tempfile = "3.8"            # Safely create temporary directories for database I/O tests
loom = "0.7"                # Permutation testing harness for concurrent/lock-free code
criterion = "0.8"           # Industry-standard microbenchmarking framework

# Configure the benchmarking harness

[[bench]]
name = "db_bench"
harness = false

# Optimize the release profile for maximum database throughput
[profile.release]
opt-level = 3               # Maximum optimization
lto = true                  # Link Time Optimization (inlines across crate boundaries)
codegen-units = 1           # Slower compile times, but produces faster running code
